# DBD

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DBD/backend/: package-lock.json  package.json  server.js
DBD/frontend/: index.html  script.js
